--- a/.travis.yml
+++ b/.travis.yml
@@ -51,11 +51,7 @@ install:
 stages:
 - name: build
   if:  branch = HYRAX-289
-- name: test
-  if:  branch = HYRAX-289
 - name: scan
-  if:  branch = HYRAX-289 AND NOT type = pull_request
-- name: snappah
   if:  branch = HYRAX-289 AND NOT type = pull_request
 
 jobs:
@@ -67,56 +63,14 @@ jobs:
     - jdk: openjdk8
       script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
 
-    - stage: test
-      script: export STAGE=test
-      jdk: openjdk7
-      script: ant check
-    - jdk: openjdk8
-      script: ant check
-    
-    - stage: scan
-      addons: 
-        sonarcloud:
-      # jdk 7 does not work with sonar scan. jhrg 3/14/19
-      jdk: openjdk8
-      script:
-        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build 
-        - ant sonar -Dsonar.login=$SONAR_LOGIN
-        - export STAGE=scan
-        - echo $STAGE
-
     - stage: scan
       addons:
         snyk:
       script:
-        - snyk test --severity-threshold=high --json | jq '.vulnerabilities[].from[]'
+        - snyk test --severity-threshold=high
         - echo $?
         - export STAGE=scan
         - echo $STAGE
-
-    - stage: snappah
-      jdk: openjdk8
-      script:
-        - export STAGE=snappah
-        - echo $STAGE
-        - export snap_tag="snapshot-"`date +%s`;
-        - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
-        - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
-        - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;    
-        - echo "Checking ${TRAVIS_BUILD_DIR}/package/"     
-        - ls -l ${TRAVIS_BUILD_DIR}/package/
-        
-    - stage: snappah
-      jdk: openjdk8
-      script:
-        - export STAGE=snappah
-        - echo $STAGE
-        - export snap_tag="snapshot-"`date +%s`;
-        - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot ngap-dist
-        - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
-        - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;
-        - echo "Checking ${TRAVIS_BUILD_DIR}/package/"
-        - ls -l ${TRAVIS_BUILD_DIR}/package/
 
 
 # before_deploy:
