HYRAX-289. Test travis with gradle and snyk.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 //Global Properties for Java-OPeNDAP software development
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_261.jdk/Contents/Home
+// org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_261.jdk/Contents/Home
 
 DEPLOYMENT_CONTEXT=opendap
 NGAP_DEPLOYMENT_CONTEXT=ngap
