HYRAX-289. Test travis with gradle and snyk.

--- a/build.gradle
+++ b/build.gradle
@@ -162,6 +162,6 @@ task getReports(dependsOn: ['htmlDependencyReport', 'propertyReport', 'taskRepor
     println("Reports:")
 }
 
-test {
-    useJUnitPlatform()
-}
+//test {
+//    useJUnitPlatform()
+//}
