--- a/.travis.yml
+++ b/.travis.yml
@@ -86,7 +86,7 @@ jobs:
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
         - ant sonar -Dsonar.login=$SONAR_LOGIN
       script:
-        - snyk test --severity-threshold=high
+        - ./run-snyk.sh
         - export STAGE=scan
         - echo $STAGE
 
