--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,8 @@ dependencies {
     implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0-b170127.1453'
 //    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '0.9.26'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.0'
-    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
+//    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
     implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.6'
 //    implementation group: 'xerces', name: 'xercesImpl', version: '2.8.1'
     implementation group: 'xerces', name: 'xercesImpl', version: '2.12.0'
