Basically a revert of the .travis.yml
Changes introduce on teh build-numbers branch were
temporary. These (un)edits don't change the build.
[skip ci]

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ services:
 branches:
   only:
     - master
-    - build-numbers
+    - travis
 
 notifications:
   email:
@@ -62,7 +62,7 @@ stages:
   - name: snappah
     if:  branch = master AND NOT type = pull_request
   - name: hyrax-docker-trigger
-    if:  branch = master OR branch = build-numbers AND NOT type = pull_request
+    if:  branch = master AND NOT type = pull_request
 
 jobs:
   include:
