--- a/.travis.yml
+++ b/.travis.yml
@@ -87,17 +87,29 @@ jobs:
       script: ant check
 
     - stage: scan
-      name: "scan (jdk8)"
+      name: "sonarscan (jdk8)"
       addons:
         sonarcloud:
       # jdk 7 does not work with sonar scan. jhrg 3/14/19
       jdk: openjdk8
       script:
+        - export STAGE=scan-sonar
+        - echo $STAGE
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
         - ant sonar -Dsonar.login=$SONAR_LOGIN
-        - ./run-snyk.sh
-        - export STAGE=scan
+        - sonar-scanner -Dproject.settings=sonar-olfs-framework.properties -Dsonar.login=$SONAR_LOGIN
+        - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
+
+    - stage: scan
+      name: "snyk (jdk8)"
+      addons:
+        sonarcloud:
+      # jdk 7 does not work with sonar scan. jhrg 3/14/19
+      jdk: openjdk8
+      script:
+        - export STAGE=scan-snyk
         - echo $STAGE
+        - ./run-snyk.sh
 
     - stage: snappah
       name: "olfs-snapshot"
