--- a/.travis.yml
+++ b/.travis.yml
@@ -24,16 +24,22 @@ notifications:
     - jgallagher@opendap.org
 
 addons:
-  # ssh_known_hosts: www.opendap.org
+  sonarcloud:
+    organization: "opendap"
+    token:
+      secure: "N6YIytQmB+pPQI4xAFRAZ9EmYeX9Sy5T50D+AY14Z+oTXeWaWAuMPrhJI9p9QPUgI4LzGQzr3aN7HmDOwDUHPrA1KQyBdzrntwNiG+EAw/UFYr1q2TFdubSTHeYJk2/gko/5cPqPyS2fGb6cKWtlFIQRp0EZJXvHBLDK4FXdvMQ="
   apt:
     packages:
       - awscli
       - sshpass
 
+script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - sonar-scanner
 env:
   global:
-    # SONAR_LOGIN, made using "travis encrypt --org -r OPENDAP/olfs SONAR_LOGIN=335df..."
-    - secure: "GW672d33rdWG40v8ve25p909qnejhqWGzoX7+IEflv9hMZ+8vDWArtFaxuILhu/QeJlLJgMCrNyWdhgpSuyEJS8/EQlOUXWZfZaSPBVriayd7OKLY5D35PKODFPXbZpJ1GOheMz3roQkg+IjQzgey/zOGu4KQB9FjtcqllFvy38="
+    # SONAR_LOGIN, made using "travis encrypt keythingy..."
+    - secure: "N6YIytQmB+pPQI4xAFRAZ9EmYeX9Sy5T50D+AY14Z+oTXeWaWAuMPrhJI9p9QPUgI4LzGQzr3aN7HmDOwDUHPrA1KQyBdzrntwNiG+EAw/UFYr1q2TFdubSTHeYJk2/gko/5cPqPyS2fGb6cKWtlFIQRp0EZJXvHBLDK4FXdvMQ="
     # AWS_ACCESS_KEY_ID for the user 'travis-olfs'
     - secure: "N7FWlKcHNC4VRaNZFz/8WQlwJXjr7t4QLklJPiUY2xBw8n4lpYUuMjvDlwX7YupIKNGw8ama8GauNZhJ2h0qv08VeMF4VLOc5yUDt9BSEEnomiQZWa8N0paaSknlZP8Qq7YH2WVrlASIR+/Owdig1mqIv9GPW+ZkwdRTdRI9FZM="
     # AWS_SECRET_ACCESS_KEY
@@ -95,9 +101,9 @@ jobs:
       script:
         - export STAGE=scan-sonar
         - echo $STAGE
-        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-        - ant sonar -Dsonar.login=$SONAR_LOGIN
-        - sonar-scanner -Dproject.settings=sonar-olfs-framework.properties -Dsonar.login=$SONAR_LOGIN
+        #- ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+        #- ant sonar -Dsonar.login=$SONAR_LOGIN
+        - sonar-scanner -Dproject.settings=sonar-olfs-framework.properties # -Dsonar.login=$SONAR_LOGIN
         - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
 
     - stage: scan
