--- a/sonar-olfs-framework.properties
+++ b/sonar-olfs-framework.properties
@@ -4,7 +4,7 @@ sonar.projectName=OPeNDAP OLFS
 sonar.projectVersion=1.0
 
 sonar.sources=src
-sonar.exclusions=retired//**
+sonar.exclusions=retired/**
 
 sonar.cfamily.build-wrapper-output=bw-output
 sonar.cfamily.gcov.reportsPath=.
