--- a/sonar-olfs-framework.properties
+++ b/sonar-olfs-framework.properties
@@ -1,9 +1,10 @@
-sonar.organization=opendap
 sonar.projectKey=opendap-olfs
+sonar.organization=opendap
+
 sonar.projectName=OPeNDAP OLFS
 sonar.projectVersion=1.0
 
-sonar.sources=src
+sonar.sources=./src
 sonar.exclusions=retired/**
 
 sonar.cfamily.build-wrapper-output=bw-output
@@ -12,3 +13,7 @@ sonar.cfamily.threads=9
 
 sonar.host.url=https://sonarcloud.io
 
+
+
+# Encoding of the source code. Default is default system encoding
+sonar.sourceEncoding=UTF-8
