--- a/.travis.yml
+++ b/.travis.yml
@@ -71,30 +71,55 @@ jobs:
   include:
     - stage: build
       name: "jdk7"
+      jdk: openjdk7
       script:
         - export STAGE=build
         - echo "TRAVIS_BUILD_NUMBER ${TRAVIS_BUILD_NUMBER}"
-      jdk: openjdk7
-      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-    - jdk: openjdk8
+        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+
+    - stage: build
       name: "jdk8"
-      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+      jdk: openjdk8
+      script:
+        - export STAGE=build
+        - echo "TRAVIS_BUILD_NUMBER ${TRAVIS_BUILD_NUMBER}"
+        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+
+    - stage: build
+      name: "jdk11"
+      jdk: openjdk11
+      script:
+        - export STAGE=build
+        - echo "TRAVIS_BUILD_NUMBER ${TRAVIS_BUILD_NUMBER}"
+        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
 
     - stage: test
       name: "jdk7"
-      script: export STAGE=test
       jdk: openjdk7
-      script: ant check
-    - jdk: openjdk8
+      script:
+        - export STAGE=test
+        - ant check
+
+    - stage: test
       name: "jdk8"
-      script: ant check
+      jdk: openjdk8
+      script:
+        - export STAGE=test
+        - ant check
+
+    - stage: test
+      name: "jdk11"
+      jdk: openjdk11
+      script:
+        - export STAGE=test
+        - ant check
 
     - stage: scan
-      name: "sonarscan (jdk8)"
+      name: "sonarscan (jdk11)"
       addons:
         sonarcloud:
-      # jdk 7 does not work with sonar scan. jhrg 3/14/19
-      jdk: openjdk8
+      # jdk 7 and java 8 no longer work with sonar scan. jhrg 3/14/19
+      jdk: openjdk11
       script:
         - export STAGE=scan-sonar
         - echo $STAGE
