Working on travis.ym issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -110,8 +110,23 @@ jobs:
         - source ./travis/compute_build_tags.sh
         - ant -DHYRAX_VERSION="${HYRAX_BUILD_VERSION}" -DOLFS_VERSION="${OLFS_BUILD_VERSION}" -DOLFS_DIST_BASE=olfs-snapshot DISTRO
         - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;
+        - echo "Built Distribution Bundles:"
+        - ls -l ./build/dist/*.tgz
+        - echo "Checking ${TRAVIS_BUILD_DIR}/package/"
+        - ls -l ${TRAVIS_BUILD_DIR}/package/
+
+    - stage: snappah
+      name: "olfs-build-number"
+      jdk: openjdk8
+      script:
+        - export STAGE=snappah
+        - echo "STAGE is ${STAGE}"
+        - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
+        - source ./travis/compute_build_tags.sh
         - ant -DHYRAX_VERSION="${HYRAX_BUILD_VERSION}" -DOLFS_VERSION="${OLFS_BUILD_VERSION}" -DOLFS_DIST_BASE="olfs-${OLFS_BUILD_VERSION}" DISTRO
         - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;
+        - echo "Built Distribution Bundles:"
+        - ls -l ./build/dist/*.tgz
         - echo "Checking ${TRAVIS_BUILD_DIR}/package/"
         - ls -l ${TRAVIS_BUILD_DIR}/package/
 
@@ -125,7 +140,22 @@ jobs:
         - source ./travis/compute_build_tags.sh
         - ant -DHYRAX_VERSION="${HYRAX_BUILD_VERSION}" -DOLFS_VERSION="${OLFS_BUILD_VERSION}" -DOLFS_DIST_BASE=ngap-snapshot ngap-dist
         - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;
+        - echo "Build Bundles:"
+        - ls -l ./build/dist/*.tgz
+        - echo "Checking ${TRAVIS_BUILD_DIR}/package/"
+        - ls -l ${TRAVIS_BUILD_DIR}/package/
+
+    - stage: snappah
+      name: "ngap-build-number"
+      jdk: openjdk8
+      script:
+        - export STAGE=snappah
+        - echo "STAGE is ${STAGE}"
+        - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
+        - source ./travis/compute_build_tags.sh
         - ant -DHYRAX_VERSION="${HYRAX_BUILD_VERSION}" -DOLFS_VERSION="${OLFS_BUILD_VERSION}" -DOLFS_DIST_BASE="ngap-${OLFS_BUILD_VERSION}" ngap-dist
+        - echo "Build Bundles:"
+        - ls -l ./build/dist/*.tgz
         - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;
         - echo "Checking ${TRAVIS_BUILD_DIR}/package/"
         - ls -l ${TRAVIS_BUILD_DIR}/package/
