--- a/build.xml
+++ b/build.xml
@@ -980,7 +980,7 @@
         description="Packages the NGAP war file (${NGAP_DEPLOYMENT_CONTEXT}.war) into a gzipped tar file with a release related name.">
 
         <tar destfile="${build.dist}/${NGAP_DIST_BASE}-webapp.tgz" compression="gzip">
-            <zipfileset dir="${build.dist}" prefix="${NGAP_DIST_BASE}">
+            <zipfileset dir="${build.dist}" prefix="${NGAP_DIST_BASE}-webapp">
                 <include name="${NGAP_DEPLOYMENT_CONTEXT}.war"/>
             </zipfileset>
         </tar>
