--- a/build.xml
+++ b/build.xml
@@ -248,7 +248,7 @@
     <property name="catalina.lib" value="catalina-6.0.53.jar"/>
     <property name="servlet-api.lib" value="servlet-api-3.0.jar"/>
 
-    <property name="json.lib" value="json-simple-1.1.1.jar"/>
+    <property name="sjson.lib" value="json-simple-1.1.1.jar"/>
 
 
     <!-- WCS Libs -->
@@ -272,6 +272,7 @@
         <include name="${owasp-encoder-jsp}"/>
 
         <include name="${json.lib}"/>
+        <include name="${sjson.lib}"/>
         <include name="${jdom.lib}"/>
         <include name="${junit.lib}"/>
 
