--- a/build.xml
+++ b/build.xml
@@ -311,6 +311,50 @@
         <include name="${xlink.lib}"/>
     </fileset>
 
+    <fileset id="ngap-libs" dir="${lib.dir}">
+        <include name="${owasp-encoder}"/>
+        <include name="${owasp-encoder-jsp}"/>
+
+        <include name="${json.lib}"/>
+        <include name="${sjson.lib}"/>
+        <include name="${jdom.lib}"/>
+        <include name="${junit.lib}"/>
+
+        <include name="${commons-lang.lib}"/>
+        <include name="${commons-cli.lib}"/>
+        <include name="${commons-httpclient.lib}"/>
+        <include name="${commons-logging.lib}"/>
+        <include name="${commons-codec.lib}"/>
+
+        <include name="${http-components-httpclient.lib}"/>
+        <include name="${http-components-httpcore.lib}"/>
+
+        <include name="${commons-io.lib}"/>
+
+        <!-- include name="${xercesImpl.lib}"/>
+        <include name="${xercesXmlApis.lib}"/-->
+        <include name="${saxon-jdom.lib}"/>
+        <include name="${saxon-s9api.lib}"/>
+        <include name="${saxon.lib}"/>
+
+        <include name="${slf4j.lib}"/>
+        <include name="${logback-core.lib}"/>
+        <include name="${logback-classic.lib}"/>
+
+        <include name="${urlRewrite.lib}"/>
+
+        <!--    WCS-2.0 Libs   -->
+        <include name="${ogc-wcs.lib}"/>
+        <include name="${ogc-gml.lib}"/>
+        <include name="${ogc-swe.lib}"/>
+        <include name="${ogc-gmlcov.lib}"/>
+        <include name="${ogc-ows.lib}"/>
+        <include name="${ogc-jaxb.lib}"/>
+        <include name="${jaxb-core.lib}"/>
+        <include name="${jaxb-impl.lib}"/>
+        <include name="${xlink.lib}"/>
+    </fileset>
+
 
     <!-- Library (class)paths -->
     <path id="olfs.compile.classpath">
@@ -461,6 +505,7 @@
         <copy todir="${build.ngap.resources}" filtering="true">
             <fileset dir="${ngapResources.dir}">
                 <exclude name="*.png" />
+                <exclude name="lib/**" />
             </fileset>
         </copy>
 
@@ -908,10 +953,9 @@
         <sonar:sonar />
     </target>
 
-
-
     <!-- == == == == == == == == == == == == == == == == == == == == == == -->
     <!-- == == == == == == == == == == == == == == == == == == == == == == -->
+
     <target
         name="ngap"
         depends="clean,compile"
@@ -926,6 +970,17 @@
              delete it from the dist dir -->
         <!-- copy file="${ngapResources.dir}/logback-ngap.xml" tofile="${build.dist}/logback-test.xml"/ -->
 
+        <!-- Combine the libraries in the build dir, for inclusion in the WAR file below. -->
+        <copy todir="${build.ngap.resources}/lib" filtering="false">
+            <fileset refid="hyrax-libs"/>
+            <fileset dir="${ngapResources.dir}/lib">
+                <exclude name="AmazonElastiCacheClusterClient-no-version.jar"/>
+                <exclude name="memcached-session-manager-2.3.3-SNAPSHOT.jar"/>
+                <exclude name="memcached-session-manager-tc7-2.3.3-SNAPSHOT.jar"/>
+            </fileset>
+        </copy>
+
+
         <!--
         Here we:
          - Set the WAR file name to ${NGAP_DEPLOYMENT_CONTEXT}.war (A value of
@@ -936,7 +991,7 @@
         <war destfile="${build.dist}/${NGAP_DEPLOYMENT_CONTEXT}.war"
              webxml="${build.ngap.resources}/web.xml">
 
-            <lib  refid="hyrax-libs"/>
+            <lib dir="${build.ngap.resources}/lib"/>
 
             <classes dir="${build.classes}"/>
 
@@ -956,7 +1011,6 @@
                 <include name="logback.xml"/>
                 <include name="olfs.xml"/>
             </zipfileset>
-
 
             <zipfileset dir="${doc.dir}" prefix="docs">
                 <exclude name="src.distribution.readme"/>
