--- a/build.gradle
+++ b/build.gradle
@@ -33,13 +33,16 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
-    implementation group: 'junit', name: 'junit', version: '4.4'
+    //implementation group: 'junit', name: 'junit', version: '4.4'
+    implementation group: 'junit', name: 'junit', version: '4.13.1'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.6.1'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
     implementation group: 'commons-cli', name: 'commons-cli', version: '1.2'
-    implementation group: 'commons-codec', name: 'commons-codec', version: '1.8'
+    //implementation group: 'commons-codec', name: 'commons-codec', version: '1.8'
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.13'
     implementation group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'
-    implementation group: 'commons-io', name: 'commons-io', version: '2.4'
+    //implementation group: 'commons-io', name: 'commons-io', version: '2.4'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.7'
     implementation group: 'commons-lang', name: 'commons-lang', version: '2.5'
     implementation group: 'commons-logging', name: 'commons-logging', version: '1.1.3'
     implementation group: 'org.owasp.encoder', name: 'encoder', version: '1.2.2'
@@ -53,10 +56,12 @@ dependencies {
     implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0-b170127.1453'
 //    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '0.9.26'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.0'
-    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
+//    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
     implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.6'
 //    implementation group: 'xerces', name: 'xercesImpl', version: '2.8.1'
-    implementation group: 'xerces', name: 'xercesImpl', version: '2.12.0'
+//    implementation group: 'xerces', name: 'xercesImpl', version: '2.12.0'
+    implementation group: 'xerces', name: 'xercesImpl', version: '2.12.1'
     implementation group: 'commons-io', name: 'commons-io', version: '1.2'
     implementation group: 'org.jdom', name: 'jdom', version: '1.1.1'
     implementation group: 'net.sf.saxon', name: 'saxon', version: '9.1.0.8'
@@ -74,6 +79,26 @@ dependencies {
     providedCompile group: 'org.apache.tomcat', name: 'catalina', version: '6.0.53'
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+    // ---- NGAP libraries -----
+    //AmazonElastiCacheClusterClient-no-version.jar
+    implementation group: 'com.amazonaws', name: 'elasticache-java-cluster-client', version: '1.1.2'
+    //kryo-4.0.2.jar
+    implementation group: 'com.esotericsoftware', name: 'kryo', version: '4.0.2'
+    //kryo-serializers-0.46-SNAPSHOT.jar
+    implementation group: 'de.javakaffee', name: 'kryo-serializers', version: '0.45'
+    //memcached-session-manager-2.3.3-SNAPSHOT.jar
+    implementation group: 'de.javakaffee.msm', name: 'memcached-session-manager', version: '2.3.2'
+    //memcached-session-manager-tc7-2.3.3-SNAPSHOT.jar
+    compile group: 'de.javakaffee.msm', name: 'memcached-session-manager-tc7', version: '2.3.2'
+    //minlog-1.3.0.jar
+    implementation group: 'com.esotericsoftware', name: 'minlog', version: '1.3.0'
+    //msm-kryo-serializer-2.3.3-SNAPSHOT.jar
+    implementation group: 'de.javakaffee.msm', name: 'msm-kryo-serializer', version: '2.3.2'
+    //objenesis-3.2.jar
+    testImplementation group: 'org.objenesis', name: 'objenesis', version: '3.2'
+    //redisson-all-3.5.5.jar
+    implementation group: 'org.redisson', name: 'redisson-all', version: '3.11.6'
+
 }
 
 // see https://docs.gradle.org/current/dsl/org.gradle.api.plugins.ExtraPropertiesExtension.html
