--- a/.travis.yml
+++ b/.travis.yml
@@ -45,10 +45,11 @@ env:
     # WOO_UID for travis
     - secure: "jXqnDaiGjCUUAc4r865NkgbXCPfqRxrfWP+lKtAG7Lc/U6sTQBIJww1bsvfizFOdiEAgAzk4OAgE4z6djf7WbhHzyQKxGIieyLWUXoKhzAKjRYwidmKp6gBWOZSvcxURcYF2SpRAuKASpv/9lvZ3bNOlHu9LYQJ7r49AmCXJ98o="
     # SNYK_TOKEN
-    - secure: "LjpHivwAX9/UjXWpCEDaofdm4FWBWpdvC5eKicZ7VS7EKK1s9bLxNerVsf/N72c4cx6WF5xyyfYMLBUFD7GviAx7dMBLuDpKiRkZqjccmerX3DkXhQWUQ1lIIcE/o5mUnGhblouz7N/oLe8NWzhImfJ/eMy+o16zO/TKJ8bdBBU="
+    - secure: "PmWGs/4SJH3bbB66E7eHLrrjKZ7mDnobAhQriRjpVjzGfKIpYqpiYGDF4rKVyYS9nkDgnZQaUErHFmmCcuZ603Rd4RikB/EKHPUtaWBT0IOGbrF0DqL27t/xOhkJVq9OUczLt2HVYoK1qFZXs/Q3bz5FvnNIrr4lp+oUE+gvSaY="
 
 
 install:
+  - nvm install 12.13.0
   - npm install -g snyk
   - npm install -g snyk-gradle-plugin
 
