--- a/.travis.yml
+++ b/.travis.yml
@@ -92,14 +92,11 @@ jobs:
       addons:
         sonarcloud:
       # jdk 7 does not work with sonar scan. jhrg 3/14/19 and 8 sk 7/15/21
-      jdk:
-        - openjdk8
-        - openjdk11
+      jdk: openjdk8
       script:
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-        - jdk_switcher use openjdk11
+      jdk: openjdk11
         - ant sonar -Dsonar.login=$SONAR_LOGIN
-      script:
         - ./run-snyk.sh
         - export STAGE=scan
         - echo $STAGE
